--- a/Codes/Larsen_et_al_Supplement.Rmd
+++ b/Codes/Larsen_et_al_Supplement.Rmd
@@ -436,8 +436,14 @@ data_protection_supp1 <- left_join(dat_barplot_scenarios2_supp1, dat_barplot_sce
 ```{r}
 colors <- c("#BC8400","#7C2529","#005B40")
 
-plot_supp1_protection <- data_protection_supp1 %>% mutate(history = fct_relevel(history, 
-        c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
+plot_supp1_protection <- data_protection_supp1 %>% 
+  mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+  mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, endpoint = "Same endpoint",
     efficacy = "Same efficacy", penalty = "History dependent",
@@ -555,8 +561,8 @@ plot_supp1 <- dat_supp1 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.4, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -569,7 +575,7 @@ plot_supp1 <- dat_supp1 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
   scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
-  ggtitle("Infections during Omicron* - History specific model", "Conservative booster rollout") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Conservative booster rollout") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -835,8 +841,14 @@ data_protection_supp2 <- left_join(dat_barplot_scenarios2_supp2, dat_barplot_sce
 ```{r}
 colors <- c("#BC8400","#7C2529","#005B40")
 
-plot_supp2_protection <- data_protection_supp2 %>% mutate(history = fct_relevel(history, 
-        c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
+plot_supp2_protection <- data_protection_supp2 %>%
+mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+ mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, endpoint = "Same endpoint",
     efficacy = "Same efficacy", penalty = "History dependent",
@@ -955,8 +967,8 @@ plot_supp2 <- dat_supp2 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.4, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -969,7 +981,7 @@ plot_supp2 <- dat_supp2 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
     scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
-  ggtitle("Infections during Omicron* - History specific model", "Vaccinate through Omicron*") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Vaccinate through Variant X") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -1109,7 +1121,7 @@ plot_supp2_da <- dat_supp2_da %>%
   scale_y_continuous("Deaths averted per 10,000", limits = c(0,5), 
                      expand = expansion(mult = c(0,0))) +
   scale_x_discrete("Infectiousness relative to Omicron") +
-  ggtitle("Deaths averted - History specific model", "Vaccinate through Omicron*") + #, subtitle = "Variant-specific model") + 
+  ggtitle("Deaths averted - History specific model", "Vaccinate through Variant X") + #, subtitle = "Variant-specific model") + 
   theme(axis.text = element_text(size = 11, color = "black"),
         axis.title.x = element_text(size = 12, color = "black",vjust = -1),
         axis.title.y = element_text(size = 12, color = "black",vjust = +3),
@@ -1237,8 +1249,14 @@ data_protection_supp3 <- left_join(dat_barplot_scenarios2_supp3, dat_barplot_sce
 ```{r}
 colors <- c("#BC8400","#7C2529","#005B40")
 
-plot_supp3_protection <- data_protection_supp3 %>% mutate(history = fct_relevel(history, 
-        c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
+plot_supp3_protection <- data_protection_supp3 %>%
+mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+ mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, endpoint = "Same endpoint",
     efficacy = "Same efficacy", 
@@ -1364,8 +1382,8 @@ plot_supp3 <- dat_supp3 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -1378,7 +1396,7 @@ plot_supp3 <- dat_supp3 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
  # scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
       scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
-  ggtitle("Infections during Omicron* - History specific model", "Same efficacy") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Same efficacy") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -1650,8 +1668,14 @@ data_protection_supp4 <- left_join(dat_barplot_scenarios2_supp4, dat_barplot_sce
 ```{r}
 colors <- c("#BC8400","#7C2529","#005B40")
 
-plot_supp4_protection <- data_protection_supp4 %>% mutate(history = fct_relevel(history, 
-        c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
+plot_supp4_protection <- data_protection_supp4 %>% 
+  mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+  mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, endpoint = "Same endpoint",
     WTendpoint = "Same endpoint", 
@@ -1774,8 +1798,8 @@ plot_supp4 <- dat_supp4 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -1788,7 +1812,7 @@ plot_supp4 <- dat_supp4 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
   scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
-  ggtitle("Infections during Omicron* - History specific model", "Same endpoint") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Same endpoint") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -2058,8 +2082,14 @@ data_protection_supp5 <- left_join(dat_barplot_scenarios2_supp5, dat_barplot_sce
 ```{r}
 colors <- c("#BC8400","#7C2529","#005B40")
 
-plot_supp5_protection <- data_protection_supp5 %>% mutate(history = fct_relevel(history, 
-        c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
+plot_supp5_protection <- data_protection_supp5 %>% 
+mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+  mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, endpoint = "Same endpoint",
     efficacy = "Same efficacy", penalty = "History dependent",
@@ -2181,8 +2211,8 @@ plot_supp5 <- dat_supp5 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -2195,7 +2225,7 @@ plot_supp5 <- dat_supp5 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
     scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
-  ggtitle("Infections during Omicron* - History specific model", "Boost like Malaysia") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Boost like Malaysia") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -2468,8 +2498,14 @@ data_protection_prestar <- left_join(dat_barplot_scenarios2_prestar, dat_barplot
 ```{r}
 colors <- c("#BC8400","#7C2529","#005B40")
 
-plot_prestar_protection <- data_protection_prestar %>% mutate(history = fct_relevel(history, 
-        c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
+plot_prestar_protection <- data_protection_prestar %>%
+  mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+  mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, 
     endpoint = "Same endpoint",
@@ -2676,7 +2712,7 @@ plot_preOm <- dat_preOm %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(0,4,8,12,16,20,24,28,32,34)) +
       scale_x_date("Date", expand = c(0,0), date_breaks = "4 month", date_labels =  "%b %Y") + 
-  ggtitle("Infections pre-Omicron* - History specific model") + #, "Variant-specific model") +
+  ggtitle("Infections pre-Variant X - History specific model") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("solid","dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -2951,7 +2987,7 @@ vax_trends_model_star <- read_csv("../Data/ABM Supplement/supp2-vaccine_star/dat
   scale_color_manual("Country", values = c("#05878a", "#5a175d", "#dd9933")) + 
   scale_y_continuous("Vaccinated (%)", limits = c(0,100)) +
   scale_x_continuous("Days since vaccination started", limits = c(0,1095-320)) +
-  ggtitle("HSM vaccination rates", "Continue through Omicron*")+
+  ggtitle("HSM vaccination rates", "Continue through Variant X")+
   guides(shape = guide_legend(override.aes = list(size=0.8, alpha = 0.6)), 
          color = guide_legend(order = 1)) + 
     theme(axis.text = element_text(size = 14, color = "black"),
@@ -3119,6 +3155,8 @@ plot_S10 <- df_AvertedODE %>%
     country == "India" ~ "India-like",
     country == "Malaysia" ~ "Malaysia-like"
   )) %>%
+  mutate(boost.start.time = gsub("omicron*", "Variant X", boost.start.time)) %>%
+  mutate(boost.start.time = substr(boost.start.time, 0, nchar(boost.start.time)-1)) %>%
   ggplot(aes(x=boost.speed, y=deathsaverted_per10k, fill=Booster))+
   geom_point(aes(color=Booster, shape = boost.start.time), size = 2)+
   facet_grid(relativeFOI~country)+
@@ -3273,7 +3311,7 @@ S12 <- model_out_dat_total %>%
   labs(y='Infections per 10k') + 
       scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
 
-  ggtitle("Hybrid immunity model", "Boost 60 days prior to Omicron*") +
+  ggtitle("Hybrid immunity model", "Boost 60 days prior to Variant X") +
     theme(axis.text = element_text(size = 11, color = "black"), #  angle = 90
         #axis.title.x = element_text(size = 12, color = "black",vjust = -1),
         axis.text.x=element_text(angle=60, hjust=1),
@@ -3334,7 +3372,7 @@ S13 <- model_out_dat_total %>%
   scale_linetype_manual("Infectiousness relative to Omicron",values = c("solid", "dashed")) +
   labs(y='Infections per 10k') + 
       scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
-  ggtitle("Hybrid immunity model", "Boost 0 days prior to Omicron*") +
+  ggtitle("Hybrid immunity model", "Boost 0 days prior to Variant X") +
     theme(axis.text = element_text(size = 11, color = "black"), #  angle = 90
         #axis.title.x = element_text(size = 12, color = "black",vjust = -1),
         axis.text.x=element_text(angle=60, hjust=1),
@@ -3389,7 +3427,7 @@ S14 <- model_out_dat_total %>%
 scale_color_manual("Country", values = c("#05878a", "#5a175d", "#dd9933")) + 
   scale_y_continuous("Boosted (% of vaccinated)", limits = c(0,100)) +
   scale_x_continuous("Days since boosting started", limits = c(0,260)) +
-  ggtitle("Hybrid immunity model", "Boosting 0 days before Omicron*")+
+  ggtitle("Hybrid immunity model", "Boosting 0 days before Variant X")+
       theme(axis.text = element_text(size = 11, color = "black"), #  angle = 90
         axis.title.x = element_text(size = 12, color = "black",vjust = -1),
         axis.title.y = element_text(size = 12, color = "black",vjust = +3),
@@ -3442,7 +3480,7 @@ S15 <- model_out_dat_total %>%
   theme_bw()+
 scale_color_manual("Country", values = c("#05878a", "#5a175d", "#dd9933")) + 
   scale_y_continuous("Boosted (% of vaccinated)", limits = c(0,100)) +
-  scale_x_continuous("Days since boosting started", limits = c(0,260)) +  ggtitle("Hybrid immunity model", "Boosting 60 days before Omicron*")+
+  scale_x_continuous("Days since boosting started", limits = c(0,260)) +  ggtitle("Hybrid immunity model", "Boosting 60 days before Variant X")+
       theme(axis.text = element_text(size = 11, color = "black"), #  angle = 90
         axis.title.x = element_text(size = 12, color = "black",vjust = -1),
         axis.title.y = element_text(size = 12, color = "black",vjust = +3),
@@ -6854,8 +6892,8 @@ plot_supp_delayedrollout_870 <- dat_supp_delayedrollout_870 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.4, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -6868,7 +6906,7 @@ plot_supp_delayedrollout_870 <- dat_supp_delayedrollout_870 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
     scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") + 
-  ggtitle("Infections during Omicron* - History specific model", "Boosting delayed by 30 days") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Boosting delayed by 30 days") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -7143,8 +7181,8 @@ plot_supp_delayedrollout_900 <- dat_supp_delayedrollout_900 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.4, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -7157,7 +7195,7 @@ plot_supp_delayedrollout_900 <- dat_supp_delayedrollout_900 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
  # scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
     scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") +
-  ggtitle("Infections during Omicron* - History specific model", "Boosting delayed by 60 days") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Boosting delayed by 60 days") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -7433,8 +7471,8 @@ plot_supp_delayedrollout_930 <- dat_supp_delayedrollout_930 %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.4, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -7447,7 +7485,7 @@ plot_supp_delayedrollout_930 <- dat_supp_delayedrollout_930 %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
     scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") +
-  ggtitle("Infections during Omicron* - History specific model", "Boosting delayed by 90 days") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Boosting delayed by 90 days") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -8016,6 +8054,14 @@ colors <- c("#BC8400","#7C2529","#005B40")
 plot_100eff_protection <- data_protection_100eff %>% mutate(history = fct_relevel(history, 
         c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
+  mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+  mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
+          "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, endpoint = "Same endpoint",
     efficacy = "Same efficacy", penalty = "History dependent",
     WTpenalty = "History dependent", Ompenalty = "History dependent",
@@ -8138,8 +8184,8 @@ plot_supp_100eff <- dat_supp_100eff %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.4, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -8152,7 +8198,7 @@ plot_supp_100eff <- dat_supp_100eff %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
     scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") +
-  ggtitle("Infections during Omicron* - History specific model", "Booster efficacy of monovalent \n is not attenuated") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Booster efficacy of monovalent \n is not attenuated") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
@@ -8720,6 +8766,14 @@ colors <- c("#BC8400","#7C2529","#005B40")
 plot_53eff_protection <- data_protection_53eff %>% mutate(history = fct_relevel(history, 
         c("Omicron* + vaccine", "Omicron + vaccine","Delta + vaccine", 
           "WT + vaccine","Vaccine only"))) %>% 
+  mutate(history = case_when(
+    history == "Omicron*" ~ "Variant X",
+    history == "Omicron* + vaccine" ~ "Variant X + vaccine",
+    .default = history
+  )) %>%
+  mutate(history = fct_relevel(history, 
+        c("Variant X + vaccine", "Omicron + vaccine","Delta + vaccine", 
+          "WT + vaccine","Vaccine only"))) %>% 
   mutate(Scenario = recode(scenario, endpoint = "Same endpoint",
     efficacy = "Same efficacy", penalty = "History dependent",
     WTpenalty = "History dependent", Ompenalty = "History dependent",
@@ -8841,8 +8895,8 @@ plot_supp_53eff <- dat_supp_53eff %>%
   ggplot(aes(x = time, fill = booster, 
             color = booster, linetype = SAR, 
             group = interaction(country, scenario, booster, SAR))) +
-  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.5) + 
-  geom_line(aes(y=Mean), alpha = 0) + theme_classic() + 
+  geom_ribbon(aes(ymin = Lower, ymax = Upper), alpha = 0.4, color = NA) + 
+  geom_line(aes(y=Mean), alpha = 1, size = 1) + theme_classic() + 
   scale_fill_manual("Booster type", values = colors) +
   scale_color_manual("Booster type", values = colors) + 
   ylab("Infections per 10,000") +
@@ -8855,7 +8909,7 @@ plot_supp_53eff <- dat_supp_53eff %>%
   #scale_y_continuous(, limits = c(0,NA)) + # expand = c(0,0) 
   #scale_x_continuous("Time (months)", expand = c(0,0.5), breaks = c(30,32,34,36)) +
     scale_x_date("Date", expand = c(0,0), date_breaks = "1 month", date_labels =  "%b %Y") +
-  ggtitle("Infections during Omicron* - History specific model", "Booster efficacy of monovalent \n is 53% of bivalent") + #, "Variant-specific model") +
+  ggtitle("Infections during Variant X - History specific model", "Booster efficacy of monovalent \n is 53% of bivalent") + #, "Variant-specific model") +
   guides(linetype = guide_legend(override.aes = list(alpha = 1, fill=NA))) +
   scale_linetype_manual("Infectiousness", values = c("dashed")) +
   theme(axis.text = element_text(size = 11, color = "black"),
